bars with short descriptions of activities

--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
     <!-- navigation -->
     <header class="main-navigation">
       <div class="navbar">
-        <a href="#home">Home</a>
-        <a href="#news">News</a>
+        <a href="#">Home</a>
         <div class="dropdown">
           <button class="dropbtn">Dropdown
             <i class="fa fa-caret-down"></i>
@@ -51,20 +50,43 @@
 </div>
       </section>
 
-      <sefction>
-<div>
-  <img>
+      <section class="activity-section">
+<div class="half-activity-section">
+  <img src="img/fightclub.JPG" class="img-half">
 </div>
-<div>
+<div class="half-activity-section">
+
+  <img class="icon" src="icons/swords.png">
+
   <div>
-    <h2></h2>
-    <p></p>
+    <h2>Fight Club</h2>
+    <p>We train combat with the soft role-playing weapons that everyone knows, but also a number of other forms of combat. It can be anything from stunt fight, over kendo and bartitsu to steel guns and wooden shields.    </p>
   </div>
-  <img>
+ 
+  <a href="#"><img class="btn" src="icons/btn.png"></a>
 </div>
+</section>
+
+<section class="activity-section">
+  
+  <div class="half-activity-section">
+    <img class="icon" src="icons/swords.png">
+
+  <div>
+    <h2>Fight Club</h2>
+    <p>We train combat with the soft role-playing weapons that everyone knows, but also a number of other forms of combat. It can be anything from stunt fight, over kendo and bartitsu to steel guns and wooden shields.    </p>
+  </div>
+ 
+  <a href="#"><img class="btn" src="icons/btn.png"></a>
+
+  </div>
+  <div class="half-activity-section">
+    <img src="img/fightclub.JPG" class="img-half">
+  </div>
+  </section>
 
 
-      </sefction>
+      
       
 
 
