Added sections for other pages

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 
   <body onhashchange="pageChange()">
     <!-- navigation -->
-    <header class="main-navigation">
+    <header>
       <div class="navbar">
         <a href="#">Home</a>
         <div class="dropdown">
-          <button class="dropbtn">Dropdown
+          <button class="drop-btn">Dropdown
             <i class="fa fa-caret-down"></i>
           </button>
           <div class="dropdown-content">
@@ -123,10 +123,27 @@
       </div>
       </section>
       
-      
-
-
     </section>
+
+
+    <section id="fight-club" class="page"></section>
+
+    <section id="larp" class="page"></section>
+    <section id="games" class="page"></section>
+
+    <section id="workshops" class="page"></section>
+
+    <section id="events" class="page"></section>
+
+    <section id="fight-club" class="page"></section>
+    <section id="fight-club" class="page"></section>
+
+    <section id="fight-club" class="page"></section>
+
+    <section id="fight-club" class="page"></section>
+
+    <section id="fight-club" class="page"></section>
+
 
 
     <!--<footer>
