--- a/index.html
+++ b/index.html
@@ -17,17 +17,37 @@
     <!-- navigation -->
     <header>
       <div class="navbar">
-        <a href="#">Home</a>
+        <a href="/"><img class="logo" src="icons/logo.png" alt="Fafner logo" ></a>
+        <a class="nav-hover" href="/">Home</a>
         <div class="dropdown">
-          <button class="drop-btn">Dropdown
-            <i class="fa fa-caret-down"></i>
-          </button>
+          <button class="drop-btn">Activities</button>
           <div class="dropdown-content">
-            <a href="#">Link 1</a>
-            <a href="#">Link 2</a>
-            <a href="#">Link 3</a>
+            <a href="#fight-club">Fight Club</a>
+            <a href="#larp">LARP</a>
+            <a href="#games">Tabletop Games</a>
+            <a href="#workshops">Workshops</a>
           </div>
         </div>
+        <a class="nav-hover" href="#events">Events</a>
+        <div class="dropdown">
+          <button class="drop-btn">Lore</button>
+          <div class="dropdown-content">
+            <a href="#niebelungen">Niebelungen</a>
+            <a href="#other">Other</a>
+          </div>
+        </div>
+        <a class="nav-hover" href="#gallery">Gallery</a>
+        <div class="dropdown">
+          <button class="drop-btn">About
+          </button>
+          <div class="dropdown-content">
+            <a href="#info">Practical Information</a>
+            <a href="#contact">Contact</a>
+            <a href="#team">The Team</a>
+          </div>
+        </div>
+       
+        <a href="https://www.foreninglet.dk/teamenrollment/index/092039734f60d5d/8415"><img class="membership" src="icons/membership.png" alt="Become member button" ></a>
       </div>
     
     </header>
@@ -135,20 +155,20 @@
 
     <section id="events" class="page"></section>
 
-    <section id="fight-club" class="page"></section>
-    <section id="fight-club" class="page"></section>
+    <section id="niebelungen" class="page"></section>
+    <section id="other" class="page"></section>
 
-    <section id="fight-club" class="page"></section>
+    <section id="info" class="page"></section>
 
-    <section id="fight-club" class="page"></section>
+    <section id="contact" class="page"></section>
 
-    <section id="fight-club" class="page"></section>
+    <section id="team" class="page"></section>
 
 
 
-    <!--<footer>
+    <footer>
       <p>Copyright © 2020 Rolespilsforeningen Fafner</p>
-    </footer>-->
+    </footer>
 
 
     <!-- SPA functionality  -->
