Fight club elements order

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   <img class="icon" src="icons/swords.png">
 
   <div>
-    <h2>Fight Club</h2>
+    <h3>Fight Club</h3>
     <p>We train combat with the soft role-playing weapons that everyone knows, but also a number of other forms of combat. It can be anything from stunt fight, over kendo and bartitsu to steel guns and wooden shields.    </p>
   </div>
  
@@ -97,7 +97,7 @@
     <img class="icon" src="icons/helmet.png">
 
   <div>
-    <h2>LARP</h2>
+    <h3>LARP</h3>
 <p>A large part of Fafner's activities is about live role-playing. We have our regular campaign, the Neibelungen and a few annual one-day or one-of-a-kind scenarios. We often participate in Stjær role-playing events and also tend to participate in the youth and leisure clubs' Big Role-playing Day in Skanderborg.</p>  
 
 </div>
@@ -119,7 +119,7 @@
       <img class="icon" src="icons/games.png">
     
       <div>
-        <h2>Tabletop Games</h2>
+        <h3>Tabletop Games</h3>
 <p>In Fafner Roleplaying, we hold introductory workshops in table roleplaying and we have a few different groups running. We encourage our members to form groups that can meet once in a while and we are happy to make rooms, coffee, dice and game books available for game groups.
 </p>      
 </div>
@@ -134,7 +134,7 @@
         <img class="icon" src="icons/workshop.png">
     
       <div>
-        <h2>Workshops</h2>
+        <h3>Workshops</h3>
 <p>We hold many different workshops during the year under the auspices of Fafner. Some of these workshops are targeted at specific role-playing games, for example Sunfall or Quarantine Europe others are more general and can be about learning to work with leather, building weapons or costumes or modifying your favorite nerve from ugly plastic toys to the ultimate Flash Gordon jet gun.
 </p>      
 </div>
@@ -159,6 +159,24 @@
 <!----------------- fight club page ----------------->
 
     <section id="fight-club" class="page">
+
+      <div class="activity-top">
+        <img alt="swords" src="icons/swords.png">
+        <h2>Fafner Fight Club</h2>
+        <h4>All Mondays from 5pm to 6pm</h4>
+      </div>
+
+      <div class="article-element">
+        <p>
+          Fafner Fight Club is our combat training. We meet once a week, specifically Mondays from 5pm to 6pm, and fight.
+        </p>
+        <p>
+          We train combat with the soft role-playing weapons that everyone knows, but also a number of other forms of combat. It can be anything from stunt fight, over kendo and bartitsu to steel guns and wooden shields.
+        </p>
+        <p>
+          Of course we take care of each other and wear appropriate protective  equipment.
+        </p>
+      </div>
 
 
 
