Content for fight club page

--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
         <h4>All Mondays from 5pm to 6pm</h4>
       </div>
 
+
       <div class="article-element">
         <p>
           Fafner Fight Club is our combat training. We meet once a week, specifically Mondays from 5pm to 6pm, and fight.
@@ -175,6 +176,45 @@
         </p>
         <p>
           Of course we take care of each other and wear appropriate protective  equipment.
+        </p>
+      </div>
+
+      <div class="parallax"></div>
+
+      <div class="article-element">
+        <p>
+          The fight club is open to all members of Fafner role-playing games. Bring training clothes, a water bottle and preferably also some gloves of some kind (the fingers are always exposed and it hurts much less to get a rap over the teddy bears if you have gloves on) If you have your own weapons with you, it's fine, otherwise borrow one just of us.
+        </p>
+        <p>
+          A crucial part of role-playing is collaboration. In Fafner we want cultivate cooperation and team-player mindset. It helps young people develop socially as well as individually. By learning how to cooperate one acquires problem-solving skills, learns how to resolve conflicts and stand for one's values and opinions.
+        </p>
+        <p>
+          Well met!
+        </p>
+      </div>
+
+      <div class="parallax"></div>
+
+      <div class="article-element">
+        <p>
+          Martial arts are an excellent way to gain body experience. Coordination, balance, agility and strength are developed through combat training.
+        </p>
+        <p>
+          Further intensify the struggle experience of joy, excitement, thrill, pride, self-control, body awareness and self-belief.
+        </p>
+        <p>
+          You stand face to face to find out who is the strongest, has the best balance or reacts the fastest. With that understanding, you create the basis for the fights not to become too serious. It should be fun and exciting to fight with each other and both parties meet with respect.
+        </p>
+      </div>
+
+      <div class="parallax"></div>
+
+      <div class="article-element">
+        <p>
+          Today's studies show that it is possible to reduce children's and teenagers' aggression and negative behavior through martial arts. This type of physical activity helps them release their natural energy and have a lot of fun at the same time. Martian arts also play a very important role of a self-discipline development of a person and teaches about controlling one's emotions.
+        </p>
+        <p>
+          And remember: In Fafner, children win over adults! -Almost every time :-)
         </p>
       </div>
 
