--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <p>We train combat with the soft role-playing weapons that everyone knows, but also a number of other forms of combat. It can be anything from stunt fight, over kendo and bartitsu to steel guns and wooden shields.    </p>
   </div>
  
-  <a href="#"><img class="btn" src="icons/btn.png"></a>
+  <a href="#fight-club"><img class="btn" src="icons/btn.png"></a>
 </div>
 </section>
 
@@ -166,6 +166,7 @@
         <h4>All Mondays from 5pm to 6pm</h4>
       </div>
 
+<img alt="grey line" src="icons/line.png" class="grey-line">
 
       <div class="article-element">
         <p>
@@ -179,7 +180,7 @@
         </p>
       </div>
 
-      <div class="parallax"></div>
+      <div class="parallax f1"></div>
 
       <div class="article-element">
         <p>
@@ -193,7 +194,7 @@
         </p>
       </div>
 
-      <div class="parallax"></div>
+      <div class="parallax f2"></div>
 
       <div class="article-element">
         <p>
@@ -207,7 +208,7 @@
         </p>
       </div>
 
-      <div class="parallax"></div>
+      <div class="parallax f3"></div>
 
       <div class="article-element">
         <p>
