--- a/index.html
+++ b/index.html
@@ -410,7 +410,13 @@
 
     <!----------------- events page ----------------->
 
-    <section id="events" class="page"></section>
+    <section id="events" class="page">
+      <h3>Upcoming Events</h3>
+      <section id="event-section">
+      </section>
+
+      
+    </section>
 
 
 
