--- a/index.html
+++ b/index.html
@@ -459,6 +459,30 @@
 
 <!-- footer -->
     <footer>
+      <div>
+        <div>
+          <h3>Contact Us</h3>
+          <h4>The role-playing game association Fafner</h4>
+          <p>Bjedstrupvej 1, 8660 Skanderborg</p>
+          <p>e-mail:  fafnerforening@gmail.com </p>
+          <p>CVR number: 34399697</p>
+          <p>MobilePay: 444949</p>
+        </div>
+        <div>
+          <h3>Facebook Group</h3>
+     <div>
+       <img>
+       <h4></h4>
+       <p></p>
+       <a></a>
+       <div></div>
+       <p></p>
+     </div>
+        </div>
+        <div>
+          <h3>Where We Are</h3>
+        </div>
+      </div>
       <p>Copyright © 2020 Rolespilsforeningen Fafner</p>
     </footer>
 
