--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
     <!-- top of the page with background -->
     <div class="activity-top">
       <img alt="swords" src="icons/swords.png">
-      <h2>Fafner Fight Club</h2>
+      <h2>Practical information</h2>
     </div>
 
     <!-- separating styled line -->
@@ -587,7 +587,51 @@
 
   <!----------------- contact page ----------------->
 
-  <section id="contact" class="page"></section>
+  <section id="contact" class="page">
+
+    <!-- top of the page with background -->
+    <div class="activity-top">
+      <img alt="swords" src="icons/swords.png">
+      <h2>Contact</h2>
+    </div>
+
+    <!-- separating styled line -->
+    <img alt="grey line" src="icons/line.png" class="grey-line">
+
+    <!-- article -->
+    <div class="article-element">
+      <p>
+        The role-playing game association Fafner<br><br>
+        Bjedstrupvej 1, 8660 Skanderborg<br><br>
+        CVR number: 34399697<br>
+        MobilePay: 444949<br><br>
+        The board can be contacted by e-mail: fafnerforening@gmail.com<br>
+        Follow us on Facebook: https://www.facebook.com/groups/fafnerrollespil/<br><br>
+        Contacts:<br>
+        Chairman: Johan Harding<br>
+        Treasurer: Christina Gjern<br>
+      </p>
+    </div>
+    <img alt="grey line" src="icons/line.png" class="grey-line">
+
+
+    <div class="article-element">
+      <h3>The Headquarters
+      </h3>
+      <p>
+        In everyday speech HQ is fafner's clubhouse, located at Bjedstrup School, between Skanderborg and Ry. <br><br>
+        This is where we meet when there are live role-playing games and workshops.<br><br>
+        This is also where all our board games and table role-playing games are located and this is where we have our
+        large stock of tents, costumes, make-up and role-playing games.<br><br>
+      </p>
+    </div>
+    <img alt="grey line" src="icons/line.png" class="grey-line">
+
+    <div class="map" id="map">
+
+    </div>
+
+  </section>
 
 
   <!----------------- team page ----------------->
