Created a dragon icon and made top of the Niebelungen page

--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
 
       <img alt="grey line" src="icons/line.png" class="grey-line">
 
-      
+
       <div class="games-list">
         <h3>Fafner Games</h3>
         <ul>
@@ -455,7 +455,20 @@
 
     <!----------------- niebelungen page ----------------->
 
-    <section id="niebelungen" class="page"></section>
+    <section id="niebelungen" class="page">
+
+       <!-- top of the page with background -->
+
+       <div class="activity-top">
+        <img alt="two d6" src="icons/dragon.png">
+        <h2>Niebelungen</h2>
+      </div>
+
+      <!-- separating styled line -->
+
+<img alt="grey line" src="icons/line.png" class="grey-line">
+
+    </section>
 
 
 
