--- a/index.html
+++ b/index.html
@@ -493,9 +493,9 @@
       <img alt="swords" src="icons/swords.png">
       <h2>Practical information</h2>
     </div>
-
     <!-- separating styled line -->
     <img alt="grey line" src="icons/line.png" class="grey-line">
+
 
     <!-- article -->
     <div class="article-element">
@@ -507,8 +507,8 @@
         Online registration and payment : Member system
         Or MobilePay : 444949 (Write the full name of the person you are paying for in the comment on the payment.)
       </p>
+      <img alt="grey line" src="icons/line.png" class="grey-line">
     </div>
-    <img alt="grey line" src="icons/line.png" class="grey-line">
 
 
     <div class="article-element">
@@ -537,9 +537,9 @@
         Det koster en rund 20'er at deltage i rollespilskampagnen for foreningens medlemmer. For ikke medlemmer 80,-
         Kontant eller MobilPay: 444949 (husk navn på den person man betaler for i kommentaren til betalingen)
       </p>
+      <img alt="grey line" src="icons/line.png" class="grey-line">
     </div>
 
-    <img alt="grey line" src="icons/line.png" class="grey-line">
 
 
     <div class="article-element">
@@ -570,9 +570,9 @@
         ➼ Arrangere brætspil/bordrollespis dage
 
       </p>
+      <img alt="grey line" src="icons/line.png" class="grey-line">
     </div>
 
-    <img alt="grey line" src="icons/line.png" class="grey-line">
 
 
     <div class="article-element newsletter-container">
@@ -611,11 +611,11 @@
         Chairman: Johan Harding<br>
         Treasurer: Christina Gjern<br>
       </p>
+      <img alt="grey line" src="icons/line.png" class="grey-line">
     </div>
-    <img alt="grey line" src="icons/line.png" class="grey-line">
 
 
-    <div class="article-element">
+    <div class="article-element headquarters">
       <h3>The Headquarters
       </h3>
       <p>
@@ -624,12 +624,13 @@
         This is also where all our board games and table role-playing games are located and this is where we have our
         large stock of tents, costumes, make-up and role-playing games.<br><br>
       </p>
+      <img alt="grey line" src="icons/line.png" class="grey-line">
     </div>
-    <img alt="grey line" src="icons/line.png" class="grey-line">
 
-    <div class="map" id="map">
+    <div id="map">
 
     </div>
+
 
   </section>
 
@@ -645,9 +646,18 @@
   </footer>
 
 
+
+  <!-- MAP JS -->
+
+  <script
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDF4FDPXA31mnvIyBXwsiq3e8S27d0qxfY&map_ids=5f30455d0db8305&callback=initMap&v=weekly"
+    async></script>
+
   <!-- SPA functionality  -->
   <script src="js/spa.js"></script>
+
   <!-- main js file -->
+
   <script src="js/main.js"></script>
 </body>
 
