--- a/index.html
+++ b/index.html
@@ -662,9 +662,7 @@
       <img alt="grey line" src="icons/line.png" class="grey-line">
     </div>
 
-    <div id="map">
-
-    </div>
+    <div id="map"></div>
 
 
   </section>
@@ -679,23 +677,14 @@
 
 
   <!-- MAP JS -->
-
   <script
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDF4FDPXA31mnvIyBXwsiq3e8S27d0qxfY&map_ids=5f30455d0db8305&callback=initMap&v=weekly"
     async></script>
 
   <!-- SPA functionality  -->
   <script src="js/spa.js"></script>
-
   <!-- main js file -->
-
   <script src="js/main.js"></script>
-</body>
-
-<!-- SPA functionality  -->
-<script src="js/spa.js"></script>
-<!-- main js file -->
-<script src="js/main.js"></script>
 </body>
 
 </html>
