--- a/index.html
+++ b/index.html
@@ -540,86 +540,66 @@
   <section id="other" class="page"></section>
 
 
-
-
-  <!-- top of the page with background -->
-  <div class="activity-top">
-    <img alt="swords" src="icons/swords.png">
-    <h2>Practical information</h2>
-  </div>
-  <!-- separating styled line -->
-  <img alt="grey line" src="icons/line.png" class="grey-line">
-
-
-  <!-- article -->
-  <div class="article-element">
-    <h3>Fafner membership fee</h3>
-    <p>
-      0-17 years: 125, - pr. half year<br><br>
-      18-25, - 200 pr. half year<br><br>
-      25 +, - 250 pr. half year<br><br>
-      Online registration and payment : Member system
-      Or MobilePay : 444949 (Write the full name of the person you are paying for in the comment on the payment.)
-    </p>
+  <section id="info" class="page">
+    <!-- top of the page with background -->
+    <div class="activity-top">
+      <img alt="swords" src="icons/swords.png">
+      <h2>Practical information</h2>
+    </div>
+    <!-- separating styled line -->
     <img alt="grey line" src="icons/line.png" class="grey-line">
-  </div>
 
 
-  <div class="article-element">
-    <h3>Nibelungen -Fafner's egen
-      rollespilskampagne
-    </h3>
-    <p>
-      Hvor og hvornår
-      Den anden søndag om måneden (ikke i juli og december).<br><br>
-
-      Tidspunkt
-      Vi starter indtjek kl. 11:00 og slutter dette ca. kl. 11.30. Herefter vi afholde en kort briefing, derefter vil
-      rollespillet begynde. Rollespillet slutter igen kl. 15:00, hvor vil vil holde en debriefing. Efter debriefingen
-      afholdes de afsluttende kampe, hvor vi alle få lov at slås en gang til for at slutte dagen ordenligt af, indtil
-      k. 16.00.
-      <br><br>
-      Mad og drikke
-      Vi sørger for mad og drikke inde i spillet, man kan købe det gennem kroen for arbejde el. spilpenge. Det kan for
-      nogle, være et godt supplement at have en extra snackmadpakke og en drikkedunk med.
-      <br><br>
-      Lån af udstyr
-      Du kan låne et sværd og rollespilstøj af os, hvis du ikke har våben eller udstyr selv. De vil blive udleveret
-      ved indtjek og koster ikke noget at låne.
-      <br><br>
-      Pris
-      Det koster en rund 20'er at deltage i rollespilskampagnen for foreningens medlemmer. For ikke medlemmer 80,-
-      Kontant eller MobilPay: 444949 (husk navn på den person man betaler for i kommentaren til betalingen)
-    </p>
-    <img alt="grey line" src="icons/line.png" class="grey-line">
-  </div>
+    <!-- article -->
+    <div class="article-element">
+      <h3>Fafner membership fee</h3>
+      <p>
+        0-17 years: 125, - pr. half year<br><br>
+        18-25, - 200 pr. half year<br><br>
+        25 +, - 250 pr. half year<br><br>
+        Online registration and payment : Member system
+        Or MobilePay : 444949 (Write the full name of the person you are paying for in the comment on the payment.)
+      </p>
+      <img alt="grey line" src="icons/line.png" class="grey-line">
+    </div>
 
 
-  <!----------------- info page ----------------->
+    <div class="article-element">
+      <h3>Nibelungen -Fafner's egen
+        rollespilskampagne
+      </h3>
+      <p>
+        Hvor og hvornår
+        Den anden søndag om måneden (ikke i juli og december).<br><br>
 
-  <section id="info" class="page"></section>
-
-
-
-
-
-  </p>
-  <img alt="grey line" src="icons/line.png" class="grey-line">
-  </div>
-
-
-
-  <div class="article-element newsletter-container">
-    <h3>Newsletter</h3>
-    <p>txt</p>
-    <button type="button" class="next-page-btn">Next page ></button>
-  </div>
-
-
+        Tidspunkt
+        Vi starter indtjek kl. 11:00 og slutter dette ca. kl. 11.30. Herefter vi afholde en kort briefing, derefter vil
+        rollespillet begynde. Rollespillet slutter igen kl. 15:00, hvor vil vil holde en debriefing. Efter debriefingen
+        afholdes de afsluttende kampe, hvor vi alle få lov at slås en gang til for at slutte dagen ordenligt af, indtil
+        k. 16.00.
+        <br><br>
+        Mad og drikke
+        Vi sørger for mad og drikke inde i spillet, man kan købe det gennem kroen for arbejde el. spilpenge. Det kan for
+        nogle, være et godt supplement at have en extra snackmadpakke og en drikkedunk med.
+        <br><br>
+        Lån af udstyr
+        Du kan låne et sværd og rollespilstøj af os, hvis du ikke har våben eller udstyr selv. De vil blive udleveret
+        ved indtjek og koster ikke noget at låne.
+        <br><br>
+        Pris
+        Det koster en rund 20'er at deltage i rollespilskampagnen for foreningens medlemmer. For ikke medlemmer 80,-
+        Kontant eller MobilPay: 444949 (husk navn på den person man betaler for i kommentaren til betalingen)
+      </p>
+      <img alt="grey line" src="icons/line.png" class="grey-line">
+    </div>
+    <div class="article-element newsletter-container">
+      <h3>Newsletter</h3>
+      <p>txt</p>
+      <button type="button" class="next-page-btn">Next page ></button>
+    </div>
   </section>
 
 
-  <!----------------- contact page ----------------->
   <!----------------- contact page ----------------->
 
   <section id="contact" class="page">
@@ -666,8 +646,6 @@
 
 
   </section>
-
-
 
 
   <!----------------- team page ----------------->
