another paper page + fixed style for it

--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
 
 
     <div class="papirus">
-      <h3>Fafner Games</h3>
+      <h3 style="margin-bottom: 50px;">Fafner Games</h3>
       <ul>
         <li>Risk</li>
         <li>Arkham Horror</li>
@@ -561,11 +561,13 @@
 
     <img alt="grey line" src="icons/line.png" class="grey-line">s
 
-    <!-- history -->
+    <!-- lore -->
 
-    <div class="papirus-scroll">
+    <div class="papirus">
+      <div>
       <h3>Kongeriget Niebelungen </h3>
       <h5>A continued role-playing campaign</h5>
+      </div>
       <p>Nibelungen is a small and legendary kingdom, which nowadays is only connected to the human world via a portal, which at certain intervals manifests itself in the town Bjedstrup which is located between Skanderborg and Ry in Denmark.
       </p>
       <p>Niebelungen is trapped in a time pocket, which in human time matches the period between the German-Roman emperor Charlemagne (also known as Charlemagne - died 814) and Emperor Charles the 5th (died 1556).
@@ -594,6 +596,30 @@
       </p>
   
     </div>
+
+
+    <!-- separating styled line -->
+
+    <img alt="grey line" src="icons/line.png" class="grey-line">s
+
+    <!-- hitory -->
+
+    <div class="papirus">
+      <div>
+      <h3>Niebelungen</h3>
+      <h5>History and Geography</h5>
+      </div>
+      <p>
+        In the early days, Niebelungen was a united kingdom under the mighty King Charles the Bald - a warrior king by the grace of the gods, who united the kingdom and ensured peace in the land for as long as he lived. He ruled with an iron fist in the velvet glove and was also a master at keeping the various factions and genera in check and playing them off against each other if it drew up to disagreements.
+      </p>
+      <p>
+        To further strengthen the unity, Charles adopted a young man from each of the ruling families: an elven prince, a son of an orc prince, and a human child, raising them as his own sons.
+      </p>
+      <p>
+        But when Karl died, the unity was over. Karl's adopted sons individually demanded to be recognized as the new king of the entire Niebelungen - but as neither of them could muster an army large enough to seriously overcome both of the other two factions - the Nibelungen ended up being divided into three city-states, which have since been embroiled in strife
+      </p>
+    </div>
+
 
     
 
