added characters database

--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@
 
     <!-- separating styled line -->
 
-    <img alt="grey line" src="icons/line.png" class="grey-line">s
+    <img alt="grey line" src="icons/line.png" class="grey-line">
 
     <!-- hitory -->
 
@@ -620,7 +620,15 @@
       </p>
     </div>
 
+ <!-- separating styled line -->
 
+ <img alt="grey line" src="icons/line.png" class="grey-line">
+
+ <h3>Niebelungen</h3>
+      <h5>Consistent character & Game Marshals</h5>
+
+      <div class="characters-grid">
+      </div>
     
 
 
